--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,7 +18,11 @@
 
 /*My CSS code*/
 
-
+#overlayImage
+{
+  width: 50px;
+  height: 30px;
+}
 .hovereffect {
   width: 100%;
   height: 100%;
@@ -55,7 +59,7 @@
 }
 
 .hovereffect:hover img {
-  opacity: 0.4;
+  opacity: 0.9;
   filter: alpha(opacity=40);
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
